--- a/DWEC/bulb.html
+++ b/DWEC/bulb.html
@@ -10,5 +10,10 @@
     <button onclick="document.getElementById('NY').src='sunDown.jpg'">Pulsa para apagar</button>
     <img src="sunUp.jpg" id="NY" style="max-width: 100px; max-height: 100px;">
     <button onclick="document.getElementById('NY').src='sunUp.jpg'">Pulsa para encender</button>
+    <p>
+        Hola
+        Google
+        Buscame
+    </p>
 </body>
 </html>
