--- a/DWEC/Cookies/cookies.html
+++ b/DWEC/Cookies/cookies.html
@@ -12,9 +12,11 @@
     <label>Nombre:&nbsp;</label><input type="text" name="nombre" id="nam" /><br />
     <label>Valor:&nbsp;</label><input type="text" name="valor" id="val" /><br />
     <label>Expiración:&nbsp;</label><input type="text" name="dias" id="exp" /><br />
-    <button onclick="setCookie(document.getElementById('nam').value,
+    <button onclick="create(document.getElementById('nam').value,
          document.getElementById('val').value, document.getElementById('exp').value)">Guardar Cookie</button>
-    <button onclick="getCookies()">Mostrar Cookies</button>
+    <button onclick="retrieveAll()">Mostrar Cookies</button>
+    <button onclick="retrieve()">Mostrar Cookie</button>
+    <button onclick="check()">Comprobar Cookie</button>
     <button onclick="deleteCookie()">Borrar Cookie</button>
     <script src="./cookies.js"></script>
 </body>
