--- a/DIW/Practicas/PaginaResponsive/index.html
+++ b/DIW/Practicas/PaginaResponsive/index.html
@@ -1,34 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <section name="cabecera">
-        <header>
+    <header>
 
-        </header>
-    </section>
-    <section name="navegacion">
-        <nav>
-
-        </nav>
-    </section>
+    </header>
+    <nav>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </nav>
     <section name="contenido">
         <article>
 
         </article>
         <aside>
-            
+
         </aside>
     </section>
-    <section name="pie">
-        <footer>
-
-        </footer>
-    </section>
+    <footer>
+        <ul id="colum1">
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+        <ul id="colum2">
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+        <ul id="colum3">
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </footer>
 </body>
+
 </html>
