--- a/DIW/Practicas/PaginaResponsive/index.html
+++ b/DIW/Practicas/PaginaResponsive/index.html
@@ -5,43 +5,59 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <title>Diseño Responsive</title>
 </head>
 
 <body>
     <header>
-
+        <img src="img/icono.jpeg" alt="Iono de Adrián" />
+        <h1>Mi página web</h1>
+        <nav>
+            <ul class="navegacion">
+                <li>Home</li>
+                <li>Curriculum</li>
+                <li>Sobre mi</li>
+            </ul>
+        </nav>
     </header>
-    <nav>
-        <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul>
-    </nav>
     <section name="contenido">
+        <aside class="marketing">
+            <ul id="colum3">
+                <li>Conocenos</li>
+                <li>Sobre nosotros</li>
+                <li>Contacto</li>
+            </ul>
+        </aside>
         <article>
 
         </article>
-        <aside>
-
+        <aside class="barNav">
+            <ul id="colum3">
+                <li>Conocenos</li>
+                <li>Sobre nosotros</li>
+                <li>Contacto</li>
+            </ul>
         </aside>
     </section>
     <footer>
         <ul id="colum1">
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Conocenos</li>
+            <li class="about">Sobre nosotros</li>
+            <li>Contacto</li>
         </ul>
-        <ul id="colum2">
-            <li></li>
-            <li></li>
-            <li></li>
+        <ul class="colum2">
+            <li>
+                <iframe class="map"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3028.891291533448!2d-3.7109588848725195!3d40.61022205177323!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd43d5046cab0bc9%3A0x6f9f7fa42b42578e!2sIES%20Jos%C3%A9%20Luis%20Sampedro!5e0!3m2!1ses!2ses!4v1667920245381!5m2!1ses!2ses"
+                    style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </li>
         </ul>
         <ul id="colum3">
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Conocenos</li>
+            <li>Sobre nosotros</li>
+            <li>Contacto</li>
         </ul>
     </footer>
 </body>
