--- a/DWEC/Formulario/Formulario.html
+++ b/DWEC/Formulario/Formulario.html
@@ -14,13 +14,13 @@
 </head>
 <body>
     <form action="" method="post">
-        <label>Nombre:&nbsp;</label><input type="text" name="nombre" id="nombre">
+        <label>Nombre:&nbsp;</label><input type="text" name="nombre" id="nombre" />
         <label>Apellido 1:&nbsp;</label><input type="text" name="ap1" id="ap1">
-        <label>Apellido 2:&nbsp;</label><input type="text" name="ap2" id="ap22"><br />
+        <label>Apellido 2:&nbsp;</label><input type="text" name="ap2" id="ap2"><br />
         <label>DNI:&nbsp;</label><input type="radio" name="ident" id="dni">
         <label>NIE:&nbsp;</label><input type="radio" name="ident" id="nie">
         <label>PASS:&nbsp;</label><input type="radio" name="ident" id="pass">
-        <label>N&uacute;mero documento:&nbsp;</label><input type="text" name="numident" id="ident"><br />
+        <label>N&uacute;mero documento:&nbsp;</label><input type="text" name="numident" id="documento"><br />
         <label>Correo electr&oacute;nico:&nbsp;</label><input type="text" name="mail" id="email" placeholder="ejemplo@ejemplo.com"><br />
         <label>Tel&eacute;fono:&nbsp;</label><input type="tel" name="telef" id="telef" placeholder="(+34) 666 777 888">
         <label>Tel&eacute;fono URGENCIAS:&nbsp;</label><input type="tel" name="telefurg" id="telefurg" placeholder="(+34) 666 777 888"><br />
