--- a/DWEC/JavaScript/JSON/Digimon/digimon.html
+++ b/DWEC/JavaScript/JSON/Digimon/digimon.html
@@ -28,8 +28,7 @@
         </div>
     </div>
     <div id="content">
-        <div id="portfolio" class="row row-cols-1 row-cols-md3 row-cold-lg-4">
-        </div>
+        <div id="portfolio" class="row row-cols-1 row-cols-md3 row-cold-lg-4"></div>
     </div>
     <script type="text/javascript" src="digimon.js"></script>
 </body>
